# labs

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  PROMTS.md  Promts.md  README.md  REPORT.docx  REPORT.md  adaboost.cpp  adaboost.h  algorithms.cpp  algorithms.h  analysis.h  bisection_method.h  brute_force.cpp  brute_force.h  c45.h  cache.cpp  cache.h  cache_emulator  camellia.cpp  camellia.h  cart.h  chaid.h  counting_sort.cpp  counting_sort.h  csv_loader.cpp  csv_loader.h  data.h  decision_trees  entropy.h  equation_systems.h  extended_test  extended_test.cpp  floyd.h  gauss.cpp  gauss.h  gauss_back_substitution.md  (+100 more)
Theory/: Методтрапеций.docx  методпрямоугольников.docx  методсимпсона.docx
bench/: bench.cpp
common/: common.h
include/: avl_tree.h  brute_force.h  common.h  common.hpp  convex_hull.h  functions.h  matrix.h  maze_solver.h  methods.h  rbt_tree.h  scenario_tests.h
myenv/: pyvenv.cfg
sorting/: heap.cpp  heap.h  merge.cpp  merge.h  quick.cpp  quick.h  test_sorts.cpp  test_sorts.h
src/: analysis.cpp  avl_tree.cpp  bisection.cpp  brute_force.cpp  convex_hull.cpp  functions.cpp  integration_methods.cpp  integration_methods.hpp  iteration.cpp  main.cpp  math_functions.cpp  math_functions.hpp  matrix.cpp  matrix.h  maze_solver.cpp  newton.cpp  rbt_tree.cpp  scenario_tests.cpp  test.cpp  time_measurement.cpp  time_measurement.hpp  utils.cpp
tasks/: task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h
tests/: test_integration.cpp
trees/: avl.cpp  avl.h  tree23.cpp  (+1 more)
(+41 files in other folders)
